--- a/Aula.ipynb
+++ b/Aula.ipynb
@@ -3965,9 +3965,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "de6ad39d",
+   "metadata": {},
+   "source": [
+    "# Condicionais"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a613a82b",
+   "metadata": {},
+   "source": [
+    "## Condicional IF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5edffb41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python funciona!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Condicional if\n",
+    "if 5 > 2:\n",
+    "    print(\"Python funciona!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f47b55f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Algo está errado!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Statement If ... Else\n",
+    "if 5 < 2:\n",
+    "    print(\"Python funciona\")\n",
+    "else:\n",
+    "    print(\"Algo está errado!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6d9b39b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6 > 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d6310ed1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 > 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b2c4c7d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 < 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f188fe36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 >= 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "223d7260",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testando Python!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 5 == 5:\n",
+    "    print(\"Testando Python!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3241df98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parece que Python funciona!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if True:\n",
+    "    print('Parece que Python funciona!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f50e5b94",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-8ee0e161c41f>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-8ee0e161c41f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if 4 > 3\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Atenção com a sintaxe\n",
+    "if 4 > 3\n",
+    "    print(\"Tudo funciona!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "00565731",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-11-f919ae27c9f2>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-f919ae27c9f2>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(\"Tudo funciona!\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Atenção com a sintaxe\n",
+    "if 4 > 3:\n",
+    "print(\"Tudo funciona!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f342778",
+   "metadata": {},
+   "source": [
+    "## Condicionais Aninhados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "067e0b22",
+   "id": "4feeaed3",
    "metadata": {},
    "outputs": [],
    "source": []
