Atualização do Readme

--- a/Python_Com_MondoBD.ipynb
+++ b/Python_Com_MondoBD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "951dd08b",
+   "id": "07c67061",
    "metadata": {},
    "source": [
     "# Gravando Dados no MongoDB com PyMongo"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8336bef3",
+   "id": "9cb336ca",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "13b46e95",
+   "id": "e6eb9bea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c1b86a0e",
+   "id": "e55bed4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ee03c0ee",
+   "id": "14cda6e3",
    "metadata": {},
    "outputs": [
     {
@@ -75,8 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d1335f3e",
+   "execution_count": 7,
+   "id": "0e1de015",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,15 +87,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a2370ac6",
+   "execution_count": 8,
+   "id": "4d5d39e7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Uma coleção é um grupo de documentos armazenados no MongoDB\n",
     "# Relativamente parecido com o conceito de tabelas relacionais\n",
-    "collection - db.cadastrodb"
+    "collection = db.cadastrodb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "28463a77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pymongo.collection.Collection"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(collection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5282f8b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
