Mini Projeto 1 carregando os Dados - Parte 1/2

--- a/Mini_Projeto_1.ipynb
+++ b/Mini_Projeto_1.ipynb
@@ -1,12 +1,141 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "39a51365",
+   "metadata": {},
+   "source": [
+    "# Instalando e Carregando Pacotes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "602e1cb2",
+   "execution_count": 1,
+   "id": "da71b406",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Versão da Linguagem Python Usada Neste Jupyter Notebook: 3.8.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Versão da Linguagem Python\n",
+    "from platform import python_version\n",
+    "print('Versão da Linguagem Python Usada Neste Jupyter Notebook:', python_version())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd960c6d",
+   "metadata": {},
+   "source": [
+    "https://pypi.org\n",
+    "\n",
+    "https://pypi.org/project/imdb-sqlite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3343bfa9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Instala o pacote\n",
+    "!pip install -q imdb-sqlite"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36d901b8",
+   "metadata": {},
+   "source": [
+    "Agora executamos o pacote para download dos datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "82c5adda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instalar o pacote\n",
+    "# https://pypi.org/project/pycountry/\n",
+    "!pip install -q pycountry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0d3547b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import time\n",
+    "import sqlite3\n",
+    "import pycountry\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from matplotlib import cm\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "# tema para gráfico\n",
+    "sns.set_theme(style = \"whitegrid\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b57d4e9",
+   "metadata": {},
+   "source": [
+    "# Carregando os Dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c9f6911",
+   "metadata": {},
+   "source": [
+    "Primeiro temos que baixar os dados!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "534dc422",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Cell magic `%%` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%% time\n",
+    "!imdb-sqlite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acbc3679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Começar o video Carregando dados parte 1/2"
+   ]
   }
  ],
  "metadata": {
