--- a/Desafio_Dio.ipynb
+++ b/Desafio_Dio.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f527a156",
+   "metadata": {},
+   "source": [
+    "# O rodízio municipal de veículos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ee5e98e",
+   "metadata": {},
+   "source": [
+    "## Forma 01"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "da2e7ec8",
    "metadata": {},
    "outputs": [
@@ -10,31 +26,283 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "mww-1021\n",
-      "1\n",
-      "Falha\n"
+      "4\n",
+      "abc-1234\n",
+      "Falha\n",
+      "a-1010\n",
+      "Falha\n",
+      "ABCD-1234\n",
+      "Falha\n",
+      "AIQ-2001\n",
+      "Segunda-Feira\n"
      ]
     }
    ],
    "source": [
+    "def maiuscula(p):\n",
+    "    if any(i.isupper() for i in p):\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
     "n = int(input())\n",
     "while n:\n",
     "    n -= 1\n",
     "    placa = input().split('-')\n",
-    "    numero = placa.pop()\n",
-    "    numero = numero[-1]\n",
-    "    print(numero)\n",
-    "    if (numero == 1 ):\n",
-    "        print('Segunda-Feira')\n",
+    "    qtdDeItens = len(placa)\n",
+    "    if (qtdDeItens == 2):\n",
+    "        numero = placa.pop()\n",
+    "        numero = numero[-1]\n",
+    "        letras = placa[0]\n",
+    "        if ( maiuscula(letras) == True and len(letras) == 3 ):\n",
+    "            if (int(numero) in (1,2)):\n",
+    "                print('Segunda-Feira')\n",
+    "            elif (int(numero) in (3,4)):\n",
+    "                print('Terça-Feira')\n",
+    "            elif (int(numero) in (5,6)):\n",
+    "                print('Quarta-Feira')\n",
+    "            elif (int(numero) in (7,8)):\n",
+    "                print('Quinta-Feira') \n",
+    "            elif (int(numero) in (9,0)):\n",
+    "                print('Sexta-Feira')          \n",
+    "            else:\n",
+    "                print('Falha')\n",
+    "        else:\n",
+    "                print('Falha')\n",
     "    else:\n",
-    "        print('Falha')"
+    "        print('Falha')       "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be00f3ec",
+   "metadata": {},
+   "source": [
+    "## Forma 02"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b01d6c47",
+   "id": "615b448b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "while n:\n",
+    "  n -= 1\n",
+    "  placa = input().split('-')\n",
+    "  \n",
+    "  if (placa[0].isupper() and placa[0].isalpha() and placa[1].isnumeric() and len(placa[0]) == 3 and len(placa[1]) == 4):\n",
+    "    try:\n",
+    "      check = int(placa[1])\n",
+    "      r = int(placa[1][3])\n",
+    "      \n",
+    "      if (r > 8 or r == 0):\n",
+    "        print('SEXTA')\n",
+    "      elif r > 6:\n",
+    "        print('QUINTA')\n",
+    "      elif r > 4:\n",
+    "        print('QUARTA')\n",
+    "      elif r > 2:\n",
+    "        print('TERCA')\n",
+    "      else:\n",
+    "        print('SEGUNDA')\n",
+    "    except:\n",
+    "      print('FALHA')\n",
+    "  else:\n",
+    "    print('FALHA')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c511874",
+   "metadata": {},
+   "source": [
+    "# Preenchimento de Vetor III"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "37088b9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200.0000\n",
+      "N[0] = 200.0000\n",
+      "N[1] = 100.0000\n",
+      "N[2] = 50.0000\n",
+      "N[3] = 25.0000\n",
+      "N[4] = 12.5000\n",
+      "N[5] = 6.2500\n",
+      "N[6] = 3.1250\n",
+      "N[7] = 1.5625\n",
+      "N[8] = 0.7812\n",
+      "N[9] = 0.3906\n",
+      "N[10] = 0.1953\n",
+      "N[11] = 0.0977\n",
+      "N[12] = 0.0488\n",
+      "N[13] = 0.0244\n",
+      "N[14] = 0.0122\n",
+      "N[15] = 0.0061\n",
+      "N[16] = 0.0031\n",
+      "N[17] = 0.0015\n",
+      "N[18] = 0.0008\n",
+      "N[19] = 0.0004\n",
+      "N[20] = 0.0002\n",
+      "N[21] = 0.0001\n",
+      "N[22] = 0.0000\n",
+      "N[23] = 0.0000\n",
+      "N[24] = 0.0000\n",
+      "N[25] = 0.0000\n",
+      "N[26] = 0.0000\n",
+      "N[27] = 0.0000\n",
+      "N[28] = 0.0000\n",
+      "N[29] = 0.0000\n",
+      "N[30] = 0.0000\n",
+      "N[31] = 0.0000\n",
+      "N[32] = 0.0000\n",
+      "N[33] = 0.0000\n",
+      "N[34] = 0.0000\n",
+      "N[35] = 0.0000\n",
+      "N[36] = 0.0000\n",
+      "N[37] = 0.0000\n",
+      "N[38] = 0.0000\n",
+      "N[39] = 0.0000\n",
+      "N[40] = 0.0000\n",
+      "N[41] = 0.0000\n",
+      "N[42] = 0.0000\n",
+      "N[43] = 0.0000\n",
+      "N[44] = 0.0000\n",
+      "N[45] = 0.0000\n",
+      "N[46] = 0.0000\n",
+      "N[47] = 0.0000\n",
+      "N[48] = 0.0000\n",
+      "N[49] = 0.0000\n",
+      "N[50] = 0.0000\n",
+      "N[51] = 0.0000\n",
+      "N[52] = 0.0000\n",
+      "N[53] = 0.0000\n",
+      "N[54] = 0.0000\n",
+      "N[55] = 0.0000\n",
+      "N[56] = 0.0000\n",
+      "N[57] = 0.0000\n",
+      "N[58] = 0.0000\n",
+      "N[59] = 0.0000\n",
+      "N[60] = 0.0000\n",
+      "N[61] = 0.0000\n",
+      "N[62] = 0.0000\n",
+      "N[63] = 0.0000\n",
+      "N[64] = 0.0000\n",
+      "N[65] = 0.0000\n",
+      "N[66] = 0.0000\n",
+      "N[67] = 0.0000\n",
+      "N[68] = 0.0000\n",
+      "N[69] = 0.0000\n",
+      "N[70] = 0.0000\n",
+      "N[71] = 0.0000\n",
+      "N[72] = 0.0000\n",
+      "N[73] = 0.0000\n",
+      "N[74] = 0.0000\n",
+      "N[75] = 0.0000\n",
+      "N[76] = 0.0000\n",
+      "N[77] = 0.0000\n",
+      "N[78] = 0.0000\n",
+      "N[79] = 0.0000\n",
+      "N[80] = 0.0000\n",
+      "N[81] = 0.0000\n",
+      "N[82] = 0.0000\n",
+      "N[83] = 0.0000\n",
+      "N[84] = 0.0000\n",
+      "N[85] = 0.0000\n",
+      "N[86] = 0.0000\n",
+      "N[87] = 0.0000\n",
+      "N[88] = 0.0000\n",
+      "N[89] = 0.0000\n",
+      "N[90] = 0.0000\n",
+      "N[91] = 0.0000\n",
+      "N[92] = 0.0000\n",
+      "N[93] = 0.0000\n",
+      "N[94] = 0.0000\n",
+      "N[95] = 0.0000\n",
+      "N[96] = 0.0000\n",
+      "N[97] = 0.0000\n",
+      "N[98] = 0.0000\n",
+      "N[99] = 0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    " x = float(input())\n",
+    "\n",
+    "for i in range(0,100):\n",
+    "  print(\"N[{}] = \".format(i), end=\"\")\n",
+    "  print('{0:.4f}'.format(x))\n",
+    "  x /= 2  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9ecb8a1",
+   "metadata": {},
+   "source": [
+    "# A mudança"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94cb6223",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "\n",
+    "  try:\n",
+    "\n",
+    "\n",
+    "\n",
+    "    graus = int(input())\n",
+    "\n",
+    "     \n",
+    "\n",
+    "    if graus == 360 or graus >= 0 and graus < 90:\n",
+    "\n",
+    "     msg = 'Bom Dia!!'\n",
+    "\n",
+    "    elif graus >= 90 and graus < 180:\n",
+    "\n",
+    "     msg = 'Boa Tarde!!'\n",
+    "\n",
+    "    elif graus >= 180 and graus < 270:\n",
+    "\n",
+    "     msg = 'Boa Noite!!'\n",
+    "\n",
+    "    else :\n",
+    "\n",
+    "     msg = 'De Madrugada!!'\n",
+    "\n",
+    "     \n",
+    "\n",
+    "    print(msg)  \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "  except EOFError:\n",
+    "\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b24e8e0",
    "metadata": {},
    "outputs": [],
    "source": []
