atualização do readme - missão 01

--- a/DesafioDSA/Missao01/missao01.ipynb
+++ b/DesafioDSA/Missao01/missao01.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "83f96ae7",
+   "id": "08bd55dd",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad96af53",
+   "id": "54828a48",
    "metadata": {},
    "source": [
     "Missão: Implementar um algoritmo para determinar se uma string possui todos os caracteres exclusivos."
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b55d563",
+   "id": "5547dedc",
    "metadata": {},
    "source": [
     "Nível de Dificuldade: Baixo"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a257437",
+   "id": "bf94a70b",
    "metadata": {},
    "source": [
     "Premissas\n",
@@ -76,13 +76,13 @@
     "<li>Também podemos usar um dicionário, mas parece mais lógico usar um set, pois ele não contém elementos duplicados</li>\n",
     "</ul>      \n",
     "\n",
-    "Solução"
+    "### Solução"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bc873172",
+   "id": "4aec3c02",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "119b0e9a",
+   "id": "c1b49663",
    "metadata": {},
    "source": [
     "### Teste da Solução"
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "23ba24af",
+   "id": "e2ebbce9",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "69eab6b7",
+   "id": "b3672913",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2874236",
+   "id": "3750ab74",
    "metadata": {},
    "outputs": [],
    "source": []
